fix radio buttons alignments and cursor

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -399,10 +399,10 @@ div.tab-content {padding:20px;border:1px solid #CCC;background-color:#FFF;margin
 .checkbox.checkbox-inline {margin-top:0;padding:0 5px}
 #privileges .checkbox label{margin-right:0px}
 */
-.radio label { display:inline-block; vertical-align:middle; position:relative; padding:0px}
+.radio label { display:inline-block; vertical-align:middle; position:relative; padding:0px;margin-top:0;margin-bottom:0px;line-height:1}
 .radio label::before { content:""; display:inline-block; position:absolute; width:17px; height:17px; left:0; margin-left:-20px; border:1px solid #bbb; border-radius:50%; background-color:#fff; -webkit-transition:border 0.15s ease-in-out; -o-transition:border 0.15s ease-in-out; transition:border 0.15s ease-in-out}
 .radio label::after { display:inline-block; position:absolute; content:" "; width:11px; height:11px; left:3px; top:3px; margin-left:-20px; border-radius:50%; background-color:@brand-success; -webkit-transform:scale(0, 0); -ms-transform:scale(0, 0); -o-transform:scale(0, 0); transform:scale(0, 0); -webkit-transition:-webkit-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); -moz-transition:-moz-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); -o-transition:-o-transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33); transition:transform 0.1s cubic-bezier(0.8, -0.33, 0.2, 1.33)}
-.radio input[type="radio"] { opacity:0; z-index:1}
+.radio input[type="radio"] { opacity:0; z-index:1;line-height:1;margin-bottom:0px;margin-top:0px;cursor:pointer;vertical-align:middle}
 .radio input[type="radio"]:focus + label::before { outline:thin dotted; outline:5px auto -webkit-focus-ring-color; outline-offset:-2px}
 .radio input[type="radio"]:checked + label::after { -webkit-transform:scale(1, 1); -ms-transform:scale(1, 1); -o-transform:scale(1, 1); transform:scale(1, 1)}
 .radio input[type="radio"]:disabled + label { opacity:0.65}
